[feat] Implementation of jacaco and checkstyle.xml
